# tgbot_template

./: .gitignore  Makefile  alembic.ini  docker-compose-dev.yml  pyproject.toml
project/core/shared/: interace.py  interactor.py
project/core/user/: dto.py  interactor.py  interface.py  model.py
project/infra/db/: main.py
project/infra/db/alembic/: env.py
project/infra/db/alembic/versions/: b46458dbcd44_.py
project/infra/db/models/: user.py
project/infra/db/repo/: __init__.py  base.py  commit.py  user.py
project/present/bot/: __main__.py  config.py
project/present/bot/handlers/: setup.py  start.py
project/present/bot/locales/: main.py
project/present/bot/locales/en-US/: main.ftl
project/present/bot/middlewares/: i18n.py  interactor.py  setup.py
project/present/bot/services/: commands.py
src/project/: config.py
src/project/infra/db/alembic/: env.py
src/project/infra/db/models/: user.py
src/project/present/bot/: __main__.py
src/project/present/bot/handlers/: setup.py
